# masterclass_interpretability_ds

./: .gitignore  Makefile  README.md  generate_slides.py  pyproject.toml
.github/workflows/: deploy-slides.yml
allfiles/: census_data_v1.csv  emotion.csv  masterclass_model_interpretation_with_shap_en.ipynb  masterclass_model_interpretation_with_shap_fr.ipynb
slides/: Masterclass_Interpretability_EN.pptx  masterclass_interpretability_shap_EN.md  masterclass_interpretability_shap_FR.md
